removed isBlank() to maintain 1.6 compatibility